cruzy-demo/force-app/main/default/objects/Authnet_Config__mdt/Authnet_Config__mdt.object-meta.xml
<CustomObject>
    <label>Authnet Config</label>
    <pluralLabel>Authnet Configs</pluralLabel>
</CustomObject>