cruzy-demo/force-app/main/default/objects/Authnet_Config__mdt/fields/API_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Login_ID__c</fullName>
    <label>API Login ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>