cruzy-demo/force-app/main/default/objects/Authnet_Config__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>