cruzy-demo/force-app/main/default/objects/Authnet_Config__mdt/fields/Transaction_Key__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Key__c</fullName>
    <label>Transaction Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>